JumpScript/tests/baselines/reference/parserMemberFunctionDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration5.jump(2,5): error TS1031: 'declare' modifier cannot appear on a class element.


==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration5.jump (1 errors) ====
    class C {
        declare Foo() { }
        ~~~~~~~
!!! error TS1031: 'declare' modifier cannot appear on a class element.
    }